prep for heroku

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <form id="apic_info" class="form-inline" action="">
           <div class="form-group">
             <label for="url">APIC-EM URL:port</label>
-            <input id="url" type="text" placeholder="sandboxapic.cisco.com:9443" class="form-control" style="width: 250px"/>
+            <input id="url" type="text" placeholder="ex: sandboxapic.cisco.com:9443" class="form-control" style="width: 250px"/>
           </div>
           <div class="form-group">
             <label for="username">Username:</label>
-            <input id="username" type="text" placeholder="admin" class="form-control"/>
+            <input id="username" type="text" placeholder="ex: devnetuser" class="form-control"/>
           </div>
           <div class="form-group">
             <label for="password">Password:</label>
-            <input id="password" type="text" placeholder="C!sc0123" class="form-control"/>
+            <input id="password" type="text" placeholder="ex: Cisco123!" class="form-control"/>
           </div>
             <button type="submit" class="btn btn-default">Send</button>
         </form>
