--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           <span class="label label-info">Step 1: Authenticate</span>
           <div class="form-group">
             <label for="url">APIC-EM URL:port</label>
-            <input id="url" type="text" placeholder="ex: sandboxapic.cisco.com:9443" class="form-control" style="width: 250px"/>
+            <input id="url" type="text" autocapitalize="none" placeholder="ex: sandboxapic.cisco.com:9443" class="form-control" style="width: 250px"/>
           </div>
           <div class="form-group">
             <label for="username">Username:</label>
-            <input id="username" type="text" placeholder="ex: devnetuser" class="form-control"/>
+            <input id="username" type="text" autocapitalize="none" placeholder="ex: devnetuser" class="form-control"/>
           </div>
           <div class="form-group">
             <label for="password">Password:</label>
