--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
 
     <footer class="navbar navbar-fixed-bottom">
       <div class="container-fluid">
-        <div class="col-lg-2 col-lg-offset-10">
+        <div class="col-lg-1 col-lg-offset-9">
+        </div>
+        <div class="col-lg-2">
           <button class="btn btn-info" data-toggle="modal" data-target="#myModal">How does this work?</button>
         </div>
       </div>
@@ -195,6 +197,17 @@
 
     return false;
   };
+
+  socket.on('socketCount', function(data) {
+    document.getElementById('socketCount').innerHTML = data;
+    //alert("hello write back");
+    });
+
+    socket.on('test', function(data) {
+      $('#test').html(data);
+      //alert("hello write back");
+      });
+
   var myList = [];
 
   socket.on('chat message', function(msg){
