--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
     return false;
   };
 
-  socket.on('socketCount', function(data) {
-    document.getElementById('socketCount').innerHTML = data;
+  //socket.on('socketCount', function(data) {
+    //document.getElementById('socketCount').innerHTML = data;
     //alert("hello write back");
-    });
+    //});
 
     socket.on('test', function(data) {
       $('#test').html(data);
